--- a/scss/modules/layers/_components.scss
+++ b/scss/modules/layers/_components.scss
@@ -67,41 +67,57 @@
     }
 }
 
-%drawer {
-    position: absolute;
+@each $mq in (small, medium, all) {
+    $suffix: if($mq == 'all', '', '-#{$mq}');
 
-    &-left {
-        right: inherit;
-        left: 0;
-    }
+    @include mq($mq) {        
+        %drawer {
+            &#{$suffix} { position: absolute; }
 
-    &-right {
-        left: inherit;
-        right: 0;
-    }
+            &-left#{$suffix} {
+                position: absolute;
 
-    &-top {
-        bottom: inherit;
-        top: 0;
-    }
+                right: inherit;
+                left: 0;
+            }
 
-    &-bottom {
-        top: inherit;
-        bottom: 0;
+            &-right#{$suffix} {
+                position: absolute;
+
+                left: inherit;
+                right: 0;
+            }
+
+            &-top#{$suffix} {
+                position: absolute;
+
+                bottom: inherit;
+                top: 0;
+            }
+
+            &-bottom#{$suffix} {
+                position: absolute;
+
+                top: inherit;
+                bottom: 0;
+            }
+        }
     }
 }
 
-@for $i from 1 through $grid-columns {
-    @each $drawer-position in (left, right) {    
-        %drawer-#{$drawer-position}-#{$i} {
-            @include drawer($width: $i, $position: $drawer-position, $push: true, $extend: false);
-        }
-    }
+@each $drawer-position in (left, right) {
+    %drawer-#{$drawer-position} {
+        @include drawer($width: auto, $position: $drawer-position, $extend: false);
 
-    @each $drawer-position in (top, bottom) {    
-        %drawer-#{$drawer-position}-#{$i} {
-            @include drawer($height: $i, $position: $drawer-position, $push: true, $extend: false);
-        }
+        &-small { @include drawer($width: $drawer-small-width, $position: $drawer-position, $push: true, $mq: small, $extend: false); }
+    }
+}
+
+@each $drawer-position in (top, bottom) {
+    %drawer-#{$drawer-position} {
+        @include drawer($height: auto, $position: $drawer-position, $extend: false);
+
+        &-small { @include drawer($height: $drawer-small-height, $position: $drawer-position, $push: true, $mq: small, $extend: false); }
     }
 }
 
