Adding standalone sandbox page; adding %display-table[-inline]; adding equivalent bottom margin (gutter) to %cols-*; centering %label-block; adding %body; adding vertical %nav-full; recognizing non-link %nav-menu-item-content; adding %content-middle (super useful); refactoring %text-middle to use %content-middle instead of table-cell trick

--- a/scss/modules/fields/_components.scss
+++ b/scss/modules/fields/_components.scss
@@ -15,7 +15,8 @@
     }
 
     &-horizontal {
-        display: table;
+        @extend %display-table;
+        
         width: 100%;
 
         &-children {
