--- a/scss/modules/nav/_module.scss
+++ b/scss/modules/nav/_module.scss
@@ -7,7 +7,8 @@ $nav-style: default !default;
 $nav-theme: default !default;
 $nav-menu-padding: 0 !default;
 $nav-menu-item-padding: 0 !default;
-$nav-menu-item-link-padding: 0.5rem !default;
+$nav-menu-item-content-padding: 0.5rem !default;
+$nav-menu-item-link-padding: $nav-menu-item-content-padding !default;
 $nav-header-padding: $nav-menu-item-link-padding !default;
 $nav-separator-color: $color-gray-light !default;
 $nav-separator-width: 1px !default;
