--- a/scss/modules/tables/_components.scss
+++ b/scss/modules/tables/_components.scss
@@ -2,6 +2,12 @@
 // Tables Components
 // =================
 
+%display-table {
+    display: table;
+
+    &-inline { display: inline-table; }
+}
+
 %table {
 	margin-bottom: $table-margin-bottom;
     text-align: $table-text-align;
